--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@
     * Added the link to SPVM::Resource::RE2 to "CPAN Modules" of SPVM::Document::Modules
   [CI Fix]
     * Fixed windows-latest workflow for CI. This is not syncronized to windows-2019.
+    * Fixed new lines from CRLF to LF of the windows-latest.yml.
 0.9692 2023-02-20
   [New Features]
     * Added the new_options method in the SPVM::ExchangeAPI class.
