--- a/Changes
+++ b/Changes
@@ -1,4 +1,10 @@
 0.9693 2023-03-02
+  [New Features]
+    * Added the $max optional argument is added to the rand method in the Fn class.
+    [Before]
+    static method rand : double ($seed : int*);
+    [After]
+    static method rand : double ($seed : int*, $max = 1 : int);
   [Document Changes]
     * Added the link to SPVM::Resource::RE2 to "CPAN Modules" of SPVM::Document::Modules
   [CI Fix]
