Added the tests of C++ libstdc++.
  [Test Improvement]
    * Added the tests of C++ libstdc++.

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.9694 2023-03-03
+  [Test Improvement]
+    * Added the tests of C++ libstdc++.
 0.9693 2023-03-03
   [New Features]
     * Added the $max optional argument is added to the rand method in the Fn class.
