Added the tests of C++ tread.
  [Test Improvement]
    * Added the tests of C++ tread.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.9694 2023-03-03
   [Test Improvement]
     * Added the tests of C++ libstdc++.
+    * Added the tests of C++ tread.
 0.9693 2023-03-03
   [New Features]
     * Added the $max optional argument is added to the rand method in the Fn class.
