--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.9695 2023-03-05
+  [Code Cleanup]
+    * Removed unused is_passed_to_method member variable in the struct spvm_op.
 0.9694 2023-03-03
   [Test Improvement]
     * Added the tests of C++ libstdc++.
