--- a/Changes
+++ b/Changes
@@ -9,6 +9,8 @@
     * Improved the new_string_from_bin method in the SPVM::ExchangeAPI class.
   [Incompatible Changes]
     * The new_string method in the SPVM::ExchangeAPI can receive undef.
+    * The new_byte_array_from_bin method in the SPVM::ExchangeAPI can receive undef.
+    * The new_string_from_bin method in the SPVM::ExchangeAPI can receive undef.
 0.9695 2023-03-05
   [Incomaptible Changes]
     * The instance method is always resolved in the runtime from the instance type.
