--- a/Changes
+++ b/Changes
@@ -11,6 +11,7 @@
     * The new_string method in the SPVM::ExchangeAPI can receive undef.
     * The new_byte_array_from_bin method in the SPVM::ExchangeAPI can receive undef.
     * The new_string_from_bin method in the SPVM::ExchangeAPI can receive undef.
+    * The new_string_from_bin in the SPVM::ExchangeAPI is the same as the new_string method.
 0.9695 2023-03-05
   [Incomaptible Changes]
     * The instance method is always resolved in the runtime from the instance type.
