--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@
   [Document Fix]
     * Fixed the doc. The set_exception method in the SPVM::ExchangeAPI can't receive a string.
     * Fixed the doc of the converson of the string Argument in SPVM::ExchangeAPI. Explicite using SvPV for conversion.
+    * Fixed the doc of the new_any_object_array. This was new_options wrongly.
   [Exception Message Improvement]
     * Improved the new_string method in the SPVM::ExchangeAPI class.
     * Improved the new_string_from_bin method in the SPVM::ExchangeAPI class.
