Removed deprecated SPVM functions. This is now used from SPVM::Exchange::API.
  [Incompatible Changes]
    * Removed deprecated SPVM functions. This is now used from SPVM::Exchange::API.
      -  new_byte_array
      -  new_byte_array_unsigne
      -  new_byte_array_len
      -  new_byte_array_from_bin
      -  new_byte_array_from_string
      -  new_short_array
      -  new_short_array_unsigned
      -  new_short_array_len
      -  new_short_array
      -  new_short_array_unsigned
      -  new_short_array_len
      -  new_short_array_from_bin
      -  new_int_array
      -  new_int_array_unsigned
      -  new_int_array_len
      -  new_int_array_from_bin
      -  new_long_array
      -  new_long_array_unsigned
      -  new_long_array_len
      -  new_long_array_from_bin
      -  new_float_array
      -  new_float_array_len
      -  new_float_array_from_bin
      -  new_double_array
      -  new_double_array_len
      -  new_double_array_from_bin
      -  new_string
      -  new_string_from_bin
      -  new_object_array
      -  new_object_array_len
      -  new_any_object_array
      -  new_mulnum_array
      -  new_mulnum_array_from_bin
      -  new_string_array
      -  new_string_array_len
      -  get_exception
      -  set_exception
      -  get_memory_blocks_count
      -  call_method
      -  new_address_object

--- a/Changes
+++ b/Changes
@@ -13,6 +13,47 @@
     * The new_byte_array_from_bin method in the SPVM::ExchangeAPI can receive undef.
     * The new_string_from_bin method in the SPVM::ExchangeAPI can receive undef.
     * The new_string_from_bin in the SPVM::ExchangeAPI is the same as the new_string method.
+    * Removed deprecated SPVM functions. This is now used from SPVM::Exchange::API.
+      -  new_byte_array
+      -  new_byte_array_unsigne
+      -  new_byte_array_len
+      -  new_byte_array_from_bin
+      -  new_byte_array_from_string
+      -  new_short_array
+      -  new_short_array_unsigned
+      -  new_short_array_len
+      -  new_short_array
+      -  new_short_array_unsigned
+      -  new_short_array_len
+      -  new_short_array_from_bin
+      -  new_int_array
+      -  new_int_array_unsigned
+      -  new_int_array_len
+      -  new_int_array_from_bin
+      -  new_long_array
+      -  new_long_array_unsigned
+      -  new_long_array_len
+      -  new_long_array_from_bin
+      -  new_float_array
+      -  new_float_array_len
+      -  new_float_array_from_bin
+      -  new_double_array
+      -  new_double_array_len
+      -  new_double_array_from_bin
+      -  new_string
+      -  new_string_from_bin
+      -  new_object_array
+      -  new_object_array_len
+      -  new_any_object_array
+      -  new_mulnum_array
+      -  new_mulnum_array_from_bin
+      -  new_string_array
+      -  new_string_array_len
+      -  get_exception
+      -  set_exception
+      -  get_memory_blocks_count
+      -  call_method
+      -  new_address_object    
 0.9695 2023-03-05
   [Incomaptible Changes]
     * The instance method is always resolved in the runtime from the instance type.
