--- a/Changes
+++ b/Changes
@@ -55,7 +55,8 @@
       -  call_method
       -  new_address_object
     * Removed deprecated pointer_t class descriptor. This is now used as pointer descriptor.
-   
+    * Removed the new_byte_array_from_string method in the SPVM::Exchange::API.
+    
 0.9695 2023-03-05
   [Incomaptible Changes]
     * The instance method is always resolved in the runtime from the instance type.
