Removed the new_string_from_bin method in the SPVM::Exchange::API.
  [Incompatible Changes]
    * Removed the new_string_from_bin method in the SPVM::Exchange::API.

--- a/Changes
+++ b/Changes
@@ -56,6 +56,7 @@
       -  new_address_object
     * Removed deprecated pointer_t class descriptor. This is now used as pointer descriptor.
     * Removed the new_byte_array_from_string method in the SPVM::Exchange::API.
+    * Removed the new_string_from_bin method in the SPVM::Exchange::API.
     
 0.9695 2023-03-05
   [Incomaptible Changes]
