Improved exception messages in SPVM::ExchangeAPI.
  [Exception Message Improvement]
    * Improved exception messages in SPVM::ExchangeAPI.

--- a/Changes
+++ b/Changes
@@ -57,7 +57,8 @@
     * Removed deprecated pointer_t class descriptor. This is now used as pointer descriptor.
     * Removed the new_byte_array_from_string method in the SPVM::Exchange::API.
     * Removed the new_string_from_bin method in the SPVM::Exchange::API.
-    
+  [Exception Message Improvement]
+    * Improved exception messages in SPVM::ExchangeAPI.
 0.9695 2023-03-05
   [Incomaptible Changes]
     * The instance method is always resolved in the runtime from the instance type.
