--- a/Changes
+++ b/Changes
@@ -60,7 +60,8 @@
   [Bug Fix]
     * Fixed the bugs that exchange API call_method can't receive string number such as "8" if the type is numeric.
     * Fixed the bugs that exchange API call_method can't receive string number such as "8" if the type is numeric reference.
-    
+  [Changes]
+    * Added a warning when non-number-like value is passed to numeric argument in Excahnge API call_method.
   [Exception Message Improvement]
     * Improved exception messages in SPVM::ExchangeAPI.
 0.9695 2023-03-05
